--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -56,7 +56,7 @@
         <h1>Places</h1>
         <article>
           <div class="name_and_price">
-            <h2>Pillow Fort</h2>
+            <h2>Tree house</h2>
             <div class="price_by_night">&#36;7</div>
           </div>
 
@@ -76,16 +76,11 @@
           </div>
 
           <div class="user">
-            <strong>Owner:</strong> My 4-year-old son
+            <strong>Owner:</strong> Lucia Miu
           </div>
 
           <div class="description">
-            Cramped yet...(cute? pre-school-ey? nvm.), one-bedroom pillow
-            fort constructed by my, er, creative, 4-year-old son. Features
-            hand-me-down blanket beds. Being a pillow fort, it has no
-            electricy, plumbing, internet, or essentially any amenities
-            whatsoever. But, at least it has a nice aroma of dino chicken
-            nuggets? Hey, it's cheap!!
+            Secluded near a running brook and treelined gravel footpaths, this Dallas-based rental makes guests forget they're not far from a bustling city
           </div>
 
           <div class="amenities">
@@ -103,8 +98,7 @@
             <ul>
               <li>
                 <p>
-                  Cute is absolutely the correct adjective for this joy of
-                  a stay. Five stars!!
+                  Magnificent. All the five stars!!
                 </p>
               </li>
             </ul>
@@ -112,8 +106,7 @@
             <ul>
               <li>
                 <p>
-                  Omg I just love the smell of dino chicken nuggets.
-                  Reminds me of my childhood. Def will return!
+                  Gorgeous gorgeous views.
                 </p>
               </li>
             </ul>
@@ -190,7 +183,7 @@
 
         <article>
           <div class="name_and_price">
-            <h2>Are You My Soul Mate?</h2>
+		  <h2>The cottage</2>
             <div class="price_by_night">&#36;0</div>
           </div>
 
@@ -210,17 +203,11 @@
           </div>
 
           <div class="user">
-            <strong>Owner:</strong> Avocado &#38; Alpaca Spiritualist
+            <strong>Owner:</strong> Makayla
           </div>
 
           <div class="description">
-            Hi there. You're reading this right now, yes? I can sense it.
-            Now, are you my soul mate? If so, I await you. Yes, you, you
-            fellow spiritualist. You, who dedicates each morning carefully
-            tending your backyard grove of avocado trees. You, who cannot
-            spend one day away from the presence of your family of 17
-            alpacas. You know who you are. Unite with me. Unite with my
-            spirit. I have two boiled eggs waiting for you.
+            Come rest your weary soul in a beautiful getaway nested between towering hills..
           </div>
 
           <div class="amenities">
@@ -238,15 +225,14 @@
             <h3>From Michel the January 2 2018</h3>
             <ul>
               <li>
-                <p>My love. It is me. I'm coming.</p>
+                <p>It was okay..</p>
               </li>
             </ul>
-            <h3>From Jean the March 23 2018</h3>
+            <h3>From Patricia the March 23 2018</h3>
             <ul>
               <li>
                 <p>
-                  You had me at "Hi there." And then you went and said you
-                  prepared two boiled eggs.
+                  A bummer.
                 </p>
               </li>
             </ul>
@@ -254,9 +240,7 @@
             <ul>
               <li>
                 <p>
-                  I thought I would never find you, yet here I am, fresh
-                  from tending to my avocado trees, feeling as I've never
-                  felt before in my life.
+                  Was disappointed my view of the mountains was obstructed by ugly trees.
                 </p>
               </li>
             </ul>
