--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -54,7 +54,7 @@
       <h1>Places</h1>
       <article>
         <div class="name_and_price">
-          <h2>Pillow Fort</h2>
+          <h2>Tree house</h2>
           <div class="price_by_night">&#36;7</div>
         </div>
 
@@ -78,11 +78,7 @@
         </div>
 
         <div class="description">
-          Cramped yet...(cute? pre-school-ey? nvm.), one-bedroom pillow fort
-          constructed by my, er, creative, 4-year-old son. Features hand-me-down
-          blanket beds. Being a pillow fort, it has no electricy, plumbing,
-          internet, or essentially any amenities whatsoever. But, at least
-          it has a nice aroma of dino chicken nuggets? Hey, it's cheap!!
+          Beautiful tree house nested in the heart of Dallas with a stunning view.
         </div>
 
         <div class="amenities">
@@ -109,8 +105,7 @@
           <ul>
             <li>
               <p>
-                Omg I just love the smell of dino chicken nuggets. Reminds me
-                of my childhood. Def will return!
+                Will be coming back.
               </p>
             </li>
           </ul>
@@ -189,7 +184,7 @@
 
       <article>
         <div class="name_and_price">
-          <h2>Are You My Soul Mate?</h2>
+          <h2>Cottage</h2>
           <div class="price_by_night">&#36;0</div>
         </div>
 
@@ -209,17 +204,11 @@
         </div>
 
         <div class="user">
-          <strong>Owner:</strong> Avocado &#38; Alpaca Spiritualist
+          <strong>Owner:</strong> Marsai
         </div>
 
         <div class="description">
-          Hi there. You're reading this right now, yes? I can sense it. Now,
-          are you my soul mate? If so, I await you. Yes, you, you fellow
-          spiritualist. You, who dedicates each morning carefully tending your
-          backyard grove of avocado trees. You, who cannot spend one day away
-          from the presence of your family of 17 alpacas. You know who you
-          are. Unite with me. Unite with my spirit. I have two boiled eggs
-          waiting for you.
+          This cottage is nested between mountains and is a perfect getaway for nature lovers
         </div>
 
         <div class="amenities">
@@ -238,7 +227,7 @@
           <ul>
             <li>
               <p>
-                My love. It is me. I'm coming.
+                They stole from me.
               </p>
             </li>
           </ul>
@@ -246,8 +235,7 @@
           <ul>
             <li>
               <p>
-                You had me at "Hi there." And then you went and said you
-                prepared two boiled eggs.
+                I could live here for ever.
               </p>
             </li>
           </ul>
@@ -255,9 +243,7 @@
           <ul>
             <li>
               <p>
-                I thought I would never find you, yet here I am, fresh
-                from tending to my avocado trees, feeling as I've never
-                felt before in my life.
+                Felt closer to nature in this hideway.
               </p>
             </li>
           </ul>
